--- a/docs/instrumentation-list.yaml
+++ b/docs/instrumentation-list.yaml
@@ -12138,8 +12138,6 @@ libraries:
           type: STRING
         - name: server.port
           type: LONG
-        - name: servlet.request.parameter.test-parameter
-          type: STRING_ARRAY
         - name: url.path
           type: STRING
         - name: url.query
@@ -12180,12 +12178,60 @@ libraries:
       default: true
     telemetry:
     - when: default
+      metrics:
+      - name: http.server.request.duration
+        description: Duration of HTTP server requests.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: http.request.method
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.protocol.version
+          type: STRING
+        - name: url.scheme
+          type: STRING
       spans:
       - span_kind: INTERNAL
         attributes:
         - name: code.function
           type: STRING
         - name: code.namespace
+          type: STRING
+      - span_kind: SERVER
+        attributes:
+        - name: client.address
+          type: STRING
+        - name: error.type
+          type: STRING
+        - name: http.request.method
+          type: STRING
+        - name: http.request.method_original
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.peer.address
+          type: STRING
+        - name: network.peer.port
+          type: LONG
+        - name: network.protocol.version
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+        - name: url.path
+          type: STRING
+        - name: url.query
+          type: STRING
+        - name: url.scheme
+          type: STRING
+        - name: user_agent.original
           type: STRING
   spark:
   - name: spark-2.3
