--- a/docs/instrumentation-list.yaml
+++ b/docs/instrumentation-list.yaml
@@ -10791,6 +10791,9 @@ libraries:
       - io.quarkus:quarkus-resteasy-reactive:(,3.9.0)
   quartz:
   - name: quartz-2.0
+    display_name: Quartz
+    description: This instrumentation enables spans for Quartz job execution.
+    library_link: https://www.quartz-scheduler.org/
     source_path: instrumentation/quartz-2.0
     scope:
       name: io.opentelemetry.quartz-2.0
@@ -10799,6 +10802,30 @@ libraries:
       - org.quartz-scheduler:quartz:[2.0.0,)
       library:
       - org.quartz-scheduler:quartz:2.0.0
+    configurations:
+    - name: otel.instrumentation.quartz.experimental-span-attributes
+      description: Enables the experimental `job.system` span attribute.
+      type: boolean
+      default: false
+    telemetry:
+    - when: default
+      spans:
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+    - when: otel.instrumentation.quartz.experimental-span-attributes=true
+      spans:
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+        - name: job.system
+          type: STRING
   r2dbc:
   - name: r2dbc-1.0
     display_name: R2DBC
