--- a/instrumentation/servlet/servlet-3.0/metadata.yaml
+++ b/instrumentation/servlet/servlet-3.0/metadata.yaml
@@ -16,6 +16,6 @@ configurations:
     type: list
     default: ""
   - name: otel.instrumentation.servlet.add-trace-id-request-attribute
-    description: Adds the trace ID as a request attribute for downstream servlet access.
+    description: Adds the trace ID and span ID as a request attributes for downstream servlet access.
     type: boolean
     default: true
