--- a/instrumentation/spark-2.3/metadata.yaml
+++ b/instrumentation/spark-2.3/metadata.yaml
@@ -1,4 +1,7 @@
+display_name: Spark Web Framework
 description: > 
   This instrumentation does not emit telemetry on its own. Instead, it extracts the HTTP route and
   attaches it to HTTP server spans and HTTP server metrics.
 library_link: https://sparkjava.com/
+features:
+  - HTTP_ROUTE
