--- a/docs/instrumentation-list.yaml
+++ b/docs/instrumentation-list.yaml
@@ -6073,10 +6073,12 @@ libraries:
       - org.jboss.logmanager:jboss-logmanager:[1.1.0.GA,)
   jdbc:
   - name: jdbc
+    display_name: JDBC
     description: |
-      The JDBC instrumentation provides database client spans and metrics. Each call produces a span named after the SQL verb, enriched with standard DB client attributes (system, database, operation, sanitized statement, peer address) and error details if an exception occurs.
-      The instrumentation unwraps pooled connections (via java.sql.Wrapper) to cache database metadata against the underlying physical connection. Without proper unwrapping support, caching is limited to the wrapper instance, which typically changes each time a connection is retrieved from the pool. This can result in repeated metadata extraction, potentially causing performance degradation.
-      There is also a "jdbc-datasource" instrumentation that creates spans for datasource connections, but is disabled by default due to the volume of telemetry produced.
+      This instrumentation enables database client spans and database client metrics for JDBC operations. There is also a datasource instrumentation that creates spans for datasource connections (disabled by default). Note: The instrumentation unwraps pooled connections to cache metadata against the underlying physical connection; without proper unwrapping, repeated metadata extraction can cause performance degradation.
+    semantic_conventions:
+    - DATABASE_CLIENT_SPANS
+    - DATABASE_CLIENT_METRICS
     library_link: https://docs.oracle.com/javase/8/docs/api/java/sql/package-summary.html
     source_path: instrumentation/jdbc
     scope:
@@ -6118,6 +6120,87 @@ libraries:
       description: Enables instrumentation of JDBC datasource connections.
       type: boolean
       default: false
+    telemetry:
+    - when: default
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.connection_string
+          type: STRING
+        - name: db.name
+          type: STRING
+        - name: db.operation
+          type: STRING
+        - name: db.sql.table
+          type: STRING
+        - name: db.statement
+          type: STRING
+        - name: db.system
+          type: STRING
+        - name: db.user
+          type: STRING
+        - name: peer.service
+          type: STRING
+        - name: server.address
+          type: STRING
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+        - name: db.connection_string
+          type: STRING
+        - name: db.name
+          type: STRING
+        - name: db.system
+          type: STRING
+        - name: db.user
+          type: STRING
+    - when: otel.semconv-stability.opt-in=database
+      metrics:
+      - name: db.client.operation.duration
+        description: Duration of database client operations.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: db.namespace
+          type: STRING
+        - name: db.operation.name
+          type: STRING
+        - name: db.system.name
+          type: STRING
+      spans:
+      - span_kind: CLIENT
+        attributes:
+        - name: db.collection.name
+          type: STRING
+        - name: db.namespace
+          type: STRING
+        - name: db.operation.batch.size
+          type: LONG
+        - name: db.operation.name
+          type: STRING
+        - name: db.query.text
+          type: STRING
+        - name: db.stored_procedure.name
+          type: STRING
+        - name: db.system.name
+          type: STRING
+        - name: peer.service
+          type: STRING
+        - name: server.address
+          type: STRING
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+        - name: db.namespace
+          type: STRING
+        - name: db.system.name
+          type: STRING
   jedis:
   - name: jedis-1.4
     description: This instrumentation enables database client spans and database client
@@ -10128,6 +10211,12 @@ libraries:
       name: io.opentelemetry.payara
   pekko:
   - name: pekko-actor-1.0
+    display_name: Pekko Actors
+    description: This instrumentation provides context propagation for Pekko actors,
+      it does not emit any telemetry on its own.
+    library_link: https://pekko.apache.org/docs/pekko/current/typed/index.html
+    features:
+    - CONTEXT_PROPAGATION
     source_path: instrumentation/pekko/pekko-actor-1.0
     scope:
       name: io.opentelemetry.pekko-actor-1.0
@@ -10137,6 +10226,17 @@ libraries:
       - org.apache.pekko:pekko-actor_2.12:[1.0,)
       - org.apache.pekko:pekko-actor_2.13:[1.0,)
   - name: pekko-http-1.0
+    display_name: Pekko HTTP
+    description: |
+      This instrumentation enables HTTP client spans and metrics for the Pekko HTTP client, and HTTP server spans and metrics for the Pekko HTTP server.
+    semantic_conventions:
+    - HTTP_CLIENT_SPANS
+    - HTTP_CLIENT_METRICS
+    - HTTP_SERVER_SPANS
+    - HTTP_SERVER_METRICS
+    library_link: https://pekko.apache.org/docs/pekko-http/current/index.html
+    features:
+    - HTTP_ROUTE
     source_path: instrumentation/pekko/pekko-http-1.0
     scope:
       name: io.opentelemetry.pekko-http-1.0
@@ -10149,6 +10249,47 @@ libraries:
       - org.apache.pekko:pekko-http_3:[1.0,)
       - com.softwaremill.sttp.tapir:tapir-pekko-http-server_2.13:[1.7,)
       - org.apache.pekko:pekko-http_2.13:[1.0,)
+    configurations:
+    - name: otel.instrumentation.http.known-methods
+      description: |
+        Configures the instrumentation to recognize an alternative set of HTTP request methods. All other methods will be treated as `_OTHER`.
+      type: list
+      default: CONNECT,DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT,TRACE
+    - name: otel.instrumentation.http.client.capture-request-headers
+      description: List of HTTP request headers to capture in HTTP client telemetry.
+      type: list
+      default: ''
+    - name: otel.instrumentation.http.client.capture-response-headers
+      description: List of HTTP response headers to capture in HTTP client telemetry.
+      type: list
+      default: ''
+    - name: otel.instrumentation.common.peer-service-mapping
+      description: Used to specify a mapping from host names or IP addresses to peer
+        services.
+      type: map
+      default: ''
+    - name: otel.instrumentation.http.client.emit-experimental-telemetry
+      description: |
+        Enable the capture of experimental HTTP client telemetry. Adds the `http.request.body.size` and `http.response.body.size` attributes to spans, and records `http.client.request.size` and `http.client.response.size` metrics.
+      type: boolean
+      default: false
+    - name: otel.instrumentation.http.client.experimental.redact-query-parameters
+      description: Redact sensitive URL parameters. See https://opentelemetry.io/docs/specs/semconv/http/http-spans.
+      type: boolean
+      default: true
+    - name: otel.instrumentation.http.server.capture-request-headers
+      description: List of HTTP request headers to capture in HTTP server telemetry.
+      type: list
+      default: ''
+    - name: otel.instrumentation.http.server.capture-response-headers
+      description: List of HTTP response headers to capture in HTTP server telemetry.
+      type: list
+      default: ''
+    - name: otel.instrumentation.http.server.emit-experimental-telemetry
+      description: |
+        Enable the capture of experimental HTTP server telemetry. Adds the `http.request.body.size` and `http.response.body.size` attributes to spans, and records `http.server.request.size` and `http.server.response.size` metrics.
+      type: boolean
+      default: false
     telemetry:
     - when: default
       metrics:
@@ -11891,26 +12032,260 @@ libraries:
       - org.scala-lang:scala-library:[2.8.0,2.12.0)
   servlet:
   - name: servlet-2.2
+    display_name: Servlet
+    description: This instrumentation enables HTTP server spans and metrics for Java
+      Servlet API.
+    semantic_conventions:
+    - HTTP_SERVER_SPANS
+    - HTTP_SERVER_METRICS
+    library_link: https://javaee.github.io/servlet-spec/
+    features:
+    - HTTP_ROUTE
     source_path: instrumentation/servlet/servlet-2.2
     scope:
       name: io.opentelemetry.servlet-2.2
     target_versions:
       javaagent:
       - javax.servlet:servlet-api:[2.2, 3.0)
+    configurations:
+    - name: otel.instrumentation.servlet.experimental-span-attributes
+      description: Enables capturing the experimental `servlet.timeout` span attribute.
+      type: boolean
+      default: false
+    - name: otel.instrumentation.servlet.capture-request-parameters
+      description: List of request parameter names to capture as span attributes.
+      type: list
+      default: ''
+    - name: otel.instrumentation.servlet.add-trace-id-request-attribute
+      description: Adds the trace ID and span ID as a request attributes for downstream
+        servlet access.
+      type: boolean
+      default: true
+    telemetry:
+    - when: default
+      metrics:
+      - name: http.server.request.duration
+        description: Duration of HTTP server requests.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: http.request.method
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: network.protocol.version
+          type: STRING
+        - name: url.scheme
+          type: STRING
+      spans:
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+      - span_kind: SERVER
+        attributes:
+        - name: client.address
+          type: STRING
+        - name: error.type
+          type: STRING
+        - name: http.request.method
+          type: STRING
+        - name: http.request.method_original
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: network.peer.address
+          type: STRING
+        - name: network.protocol.version
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+        - name: url.path
+          type: STRING
+        - name: url.query
+          type: STRING
+        - name: url.scheme
+          type: STRING
+        - name: user_agent.original
+          type: STRING
   - name: servlet-3.0
+    display_name: Servlet
+    description: This instrumentation enables HTTP server spans and metrics for Java
+      Servlet API.
+    semantic_conventions:
+    - HTTP_SERVER_SPANS
+    - HTTP_SERVER_METRICS
+    library_link: https://javaee.github.io/servlet-spec/
+    features:
+    - HTTP_ROUTE
     source_path: instrumentation/servlet/servlet-3.0
     scope:
       name: io.opentelemetry.servlet-3.0
     target_versions:
       javaagent:
       - javax.servlet:javax.servlet-api:[3.0,)
+    configurations:
+    - name: otel.instrumentation.servlet.experimental-span-attributes
+      description: Enables capturing the experimental `servlet.timeout` span attribute.
+      type: boolean
+      default: false
+    - name: otel.instrumentation.servlet.capture-request-parameters
+      description: List of request parameter names to capture as span attributes.
+      type: list
+      default: ''
+    - name: otel.instrumentation.servlet.add-trace-id-request-attribute
+      description: Adds the trace ID and span ID as a request attributes for downstream
+        servlet access.
+      type: boolean
+      default: true
+    telemetry:
+    - when: default
+      metrics:
+      - name: http.server.request.duration
+        description: Duration of HTTP server requests.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: http.request.method
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.protocol.version
+          type: STRING
+        - name: url.scheme
+          type: STRING
+      spans:
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+      - span_kind: SERVER
+        attributes:
+        - name: client.address
+          type: STRING
+        - name: error.type
+          type: STRING
+        - name: http.request.method
+          type: STRING
+        - name: http.request.method_original
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.peer.address
+          type: STRING
+        - name: network.peer.port
+          type: LONG
+        - name: network.protocol.version
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+        - name: url.path
+          type: STRING
+        - name: url.query
+          type: STRING
+        - name: url.scheme
+          type: STRING
+        - name: user_agent.original
+          type: STRING
   - name: servlet-5.0
+    display_name: Servlet
+    description: This instrumentation enables HTTP server spans and metrics for Jakarta
+      Servlet API.
+    semantic_conventions:
+    - HTTP_SERVER_SPANS
+    - HTTP_SERVER_METRICS
+    library_link: https://jakarta.ee/specifications/servlet/
+    features:
+    - HTTP_ROUTE
     source_path: instrumentation/servlet/servlet-5.0
     scope:
       name: io.opentelemetry.servlet-5.0
     target_versions:
       javaagent:
       - jakarta.servlet:jakarta.servlet-api:[5.0.0,)
+    configurations:
+    - name: otel.instrumentation.servlet.experimental-span-attributes
+      description: Enables capturing the experimental `servlet.timeout` span attribute.
+      type: boolean
+      default: false
+    - name: otel.instrumentation.servlet.capture-request-parameters
+      description: List of request parameter names to capture as span attributes.
+      type: list
+      default: ''
+    - name: otel.instrumentation.servlet.add-trace-id-request-attribute
+      description: Adds the trace ID and span ID as a request attributes for downstream
+        servlet access.
+      type: boolean
+      default: true
+    telemetry:
+    - when: default
+      metrics:
+      - name: http.server.request.duration
+        description: Duration of HTTP server requests.
+        type: HISTOGRAM
+        unit: s
+        attributes:
+        - name: http.request.method
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.protocol.version
+          type: STRING
+        - name: url.scheme
+          type: STRING
+      spans:
+      - span_kind: INTERNAL
+        attributes:
+        - name: code.function
+          type: STRING
+        - name: code.namespace
+          type: STRING
+      - span_kind: SERVER
+        attributes:
+        - name: client.address
+          type: STRING
+        - name: error.type
+          type: STRING
+        - name: http.request.method
+          type: STRING
+        - name: http.request.method_original
+          type: STRING
+        - name: http.response.status_code
+          type: LONG
+        - name: http.route
+          type: STRING
+        - name: network.peer.address
+          type: STRING
+        - name: network.peer.port
+          type: LONG
+        - name: network.protocol.version
+          type: STRING
+        - name: server.address
+          type: STRING
+        - name: server.port
+          type: LONG
+        - name: url.path
+          type: STRING
+        - name: url.query
+          type: STRING
+        - name: url.scheme
+          type: STRING
+        - name: user_agent.original
+          type: STRING
   spark:
   - name: spark-2.3
     display_name: Spark Web Framework
