--- a/.fossa.yml
+++ b/.fossa.yml
@@ -339,6 +339,9 @@ targets:
       target: ':instrumentation:apache-httpclient:apache-httpclient-5.2:library'
     - type: gradle
       path: ./
+      target: ':instrumentation:apache-httpclient:apache-httpclient-5.6:library'
+    - type: gradle
+      path: ./
       target: ':instrumentation:armeria:armeria-1.3:javaagent'
     - type: gradle
       path: ./
