--- a/.fossa.yml
+++ b/.fossa.yml
@@ -843,6 +843,9 @@ targets:
       target: ':instrumentation:opentelemetry-api:opentelemetry-api-1.57:javaagent'
     - type: gradle
       path: ./
+      target: ':instrumentation:opentelemetry-api:opentelemetry-api-1.59:javaagent'
+    - type: gradle
+      path: ./
       target: ':instrumentation:pekko:pekko-actor-1.0:javaagent'
     - type: gradle
       path: ./
