--- a/instrumentation/spring/spring-boot-resources/metadata.yaml
+++ b/instrumentation/spring/spring-boot-resources/metadata.yaml
@@ -13,3 +13,5 @@ description: >
     - Check for --spring.application.name program argument (not jvm arg) via ProcessHandle
     - Check for --spring.application.name program argument via sun.java.command system property
 library_link: https://spring.io/projects/spring-boot
+features:
+  - RESOURCE_DETECTOR
