--- a/instrumentation/spring/spring-core-2.0/metadata.yaml
+++ b/instrumentation/spring/spring-core-2.0/metadata.yaml
@@ -1,6 +1,7 @@
+display_name: Spring Core
 description: >
-  This instrumentation ensures proper context propagation for asynchronous operations
-  within Spring Core. It modifies how tasks are submitted and executed to ensure that
-  spans created by other instrumentations are correctly linked across thread boundaries,
-  rather than generating any new telemetry itself.
+  This instrumentation provides context propagation for Spring Core asynchronous task execution, it
+  does not emit any telemetry on its own.
+features:
+  - CONTEXT_PROPAGATION
 library_link: https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/core/package-summary.html
