--- a/instrumentation/spring/spring-jms/spring-jms-6.0/metadata.yaml
+++ b/instrumentation/spring/spring-jms/spring-jms-6.0/metadata.yaml
@@ -1,4 +1,7 @@
-description: This instrumentation enables the generation of consumer messaging spans for Spring JMS.
+display_name: Spring JMS
+description: This instrumentation enables messaging spans for Spring JMS message consumers.
+semantic_conventions:
+  - MESSAGING_SPANS
 library_link: https://docs.spring.io/spring-framework/reference/integration/jms.html
 configurations:
   - name: otel.instrumentation.messaging.experimental.receive-telemetry.enabled
