--- a/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-2.0/metadata.yaml
+++ b/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-2.0/metadata.yaml
@@ -1,3 +1,4 @@
+display_name: Spring Cloud Gateway
 description: >
   This instrumentation enhances tracing for Spring Cloud Gateway. It does not generate any telemetry
   on its own, but rather enriches existing traces produced by other instrumentations like Netty and
