--- a/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-webmvc-4.3/metadata.yaml
+++ b/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-webmvc-4.3/metadata.yaml
@@ -1,7 +1,7 @@
 display_name: Spring Cloud Gateway Server WebMVC
 description: >
   This instrumentation enhances tracing for Spring Cloud Gateway Server WebMVC. It does not
-  generate new telemetry on its own, but rather enriches existing traces produced by other
+  generate any telemetry on its own, but rather enriches existing traces produced by other
   instrumentations like Spring WebMVC with Spring Cloud Gateway-specific attributes.
 library_link: https://github.com/spring-cloud/spring-cloud-gateway
 configurations:
