Spring metadata updates (part 1) (#16123)

--- a/instrumentation/spring/spring-batch-3.0/metadata.yaml
+++ b/instrumentation/spring/spring-batch-3.0/metadata.yaml
@@ -1,5 +1,8 @@
+display_name: Spring Batch
 disabled_by_default: true
-description: This instrumentation enables spans for jobs run by the Spring Batch framework.
+description: >
+  This instrumentation enables spans for Spring Batch job execution, including job, step, and
+  chunk processing.
 library_link: https://spring.io/projects/spring-batch
 configurations:
   - name: otel.instrumentation.spring-batch.experimental-span-attributes
