--- a/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-2.0/metadata.yaml
+++ b/instrumentation/spring/spring-cloud-gateway/spring-cloud-gateway-2.0/metadata.yaml
@@ -1,8 +1,11 @@
+display_name: Spring Cloud Gateway
 description: >
-  This instrumentation enhances tracing for Spring Cloud Gateway. It does not generate new telemetry
+  This instrumentation enhances tracing for Spring Cloud Gateway. It does not generate any telemetry
   on its own, but rather enriches existing traces produced by other instrumentations like Netty and
   Spring WebFlux with Spring Cloud Gateway-specific attributes.
 library_link: https://github.com/spring-cloud/spring-cloud-gateway
+features:
+  - HTTP_ROUTE
 configurations:
   - name: otel.instrumentation.spring-cloud-gateway.experimental-span-attributes
     type: boolean
