--- a/docs/instrumentation-list.yaml
+++ b/docs/instrumentation-list.yaml
@@ -12288,6 +12288,8 @@ libraries:
   - name: spring-kafka-2.7
     description: This instrumentation enables consumer messaging spans for Spring
       Kafka listeners.
+    semantic_conventions:
+    - MESSAGING_SPANS
     library_link: https://spring.io/projects/spring-kafka
     source_path: instrumentation/spring/spring-kafka-2.7
     scope:
@@ -12306,7 +12308,7 @@ libraries:
       type: list
       default: ''
     - name: otel.instrumentation.kafka.experimental-span-attributes
-      description: Enables capturing experimental span attribute `kafka.record.queue_time_ms`
+      description: Enables the capture of the experimental consumer attribute `kafka.record.queue_time_ms`.
       type: boolean
       default: false
     telemetry:
